More changes - need to setup Jekyll locally!

--- a/_posts/2014-12-29-apm-2.6-configuration.md
+++ b/_posts/2014-12-29-apm-2.6-configuration.md
@@ -3,12 +3,12 @@ layout: post
 title: APM 2.6 Configuration
 ---
 
-###Current setup:
+### Current setup
 * APM (witespy) 2.8
 * Ublox M8N with compass
 * Telemetry
 
-[APM Power Configurations options]http://copter.ardupilot.com/wiki/common-apm25-and-26-overview/
+[APM Power Configurations options] http://copter.ardupilot.com/wiki/common-apm25-and-26-overview/
 
 [Mission Planner Power Monitoring Setup] http://copter.ardupilot.com/wiki/common-measuring-battery-voltage-and-current-consumption-with-apm/
 
