Added parens around URL

--- a/_posts/2014-12-29-apm-2.6-configuration.md
+++ b/_posts/2014-12-29-apm-2.6-configuration.md
@@ -8,8 +8,8 @@ title: APM 2.6 Configuration
 * Ublox M8N with compass
 * Telemetry
 
-[APM Power Configurations options] http://copter.ardupilot.com/wiki/common-apm25-and-26-overview/
+[APM Power Configurations options](http://copter.ardupilot.com/wiki/common-apm25-and-26-overview/)
 
-[Mission Planner Power Monitoring Setup] http://copter.ardupilot.com/wiki/common-measuring-battery-voltage-and-current-consumption-with-apm/
+[Mission Planner Power Monitoring Setup](http://copter.ardupilot.com/wiki/common-measuring-battery-voltage-and-current-consumption-with-apm/)
 
-[APM Initial Setup Guide] http://www.rcgroups.com/forums/showthread.php?t=1897295#post25070306
+[APM Initial Setup Guide](http://www.rcgroups.com/forums/showthread.php?t=1897295#post25070306)
